--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <packaging>jar</packaging>
 
   <name>oo-design-und-testabdeckung</name>
-  <url>http://maven.apache.org</url>
+  <url>https://github.com/doubleSlashde/oo-design-und-testabdeckung</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
